[gd_scene load_steps=3 format=2]

[ext_resource path="res://Items/Projectile.gd" type="Script" id=2]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=3]

[node name="Projectile" type="Sprite"]
script = ExtResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 20

[node name="Hitbox2" parent="." instance=ExtResource( 3 )]
collision_mask = 1

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]

[editable path="Hitbox"]
[editable path="Hitbox2"]
